make-a-wish-salesforce/src/objects/Apex_Debug_Log__c.object
<CustomObject>
    <description>A custom Object to hold Logs of type of Error and information created from various other Apex Classes. Unlike the native Debug Logs, the data or log created here are records and hence persistent as well.</description>
    <fields>
        <fullName>Actions_Taken__c</fullName>
        <description>This field is used to identify actions have been taken or not with that exception.</description>
        <label>Actions Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Addressed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to identify the exception is addressed or not</description>
        <label>Addressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>This field will store the Apex class name which cause the exception</description>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Message__c</fullName>
        <description>This field will store the developer Message</description>
        <label>Developer Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This field holds the Message of the exception</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>This field store the Method which cause the Exception</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>This field holds the record which cause the exception</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>This field will hold the Stack Trace of the Log</description>
        <label>Stack Trace</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field specify the type of the Log</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Apex Debug Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADL - {000000000}</displayFormat>
        <label>Apex Debug Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>